MODREQMED-164: extend get batch request by id response with itemRequestsStats field

--- a/src/main/resources/swagger.api/schemas/batch/mediatedBatchRequestDto.yaml
+++ b/src/main/resources/swagger.api/schemas/batch/mediatedBatchRequestDto.yaml
@@ -12,6 +12,25 @@ MediatedBatchRequestDto:
       description: Status of the mediated batch request
       type: string
       enum: [ 'Pending', 'In progress', 'Completed', 'Failed' ]
+    itemRequestsStats:
+      description: Statistics of item requests in the mediated batch request
+      type: object
+      properties:
+        total:
+          description: Total number of item requests
+          type: integer
+        pending:
+          description: Number of pending item requests
+          type: integer
+        inProgress:
+          description: Number of item requests in progress
+          type: integer
+        completed:
+          description: Number of completed item requests
+          type: integer
+        failed:
+          description: Number of failed item requests
+          type: integer
     requestDate:
       description: Date when the batch request was placed
       type: string
