--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,14 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>folio-spring-testing</artifactId>
+      <version>${folio-spring-support.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
